# CoinManagerV1

./: .env.example  .gitignore  GIT_SETUP.md  LIVE_TRADING_GUIDE.md  Makefile  README.md  SERVER_SETUP.md  commit.sh  env.example  pyproject.toml  pytest.ini
Requirement/: requirement.md
configs/: config.yaml  live-trading.yaml  paper-trading.yaml
docs/: telegram-setup.md
rules/: master 1.mdc  project-management.mdc  python-trading-dev.mdc  server.mdc  trading-system-testing.mdc  upbit-trading-system.mdc
scripts/: git-setup.sh  server-manager.sh  start-live-trading.sh  start-paper-trading.sh  stop-live-trading.sh  trading-system.sh
src/: __init__.py  app.py  trading_system.py
src/api/: __init__.py  upbit_rest.py  upbit_ws.py
src/data/: __init__.py  candles.py  features.py
src/order/: __init__.py  executor.py
src/risk/: __init__.py  guard.py
src/scanner/: __init__.py  scanner.py
src/signals/: __init__.py  orb.py  signal_manager.py  svwap_pullback.py  sweep.py
src/utils/: __init__.py  config.py  logging.py  telegram.py  time_utils.py
tests/: __init__.py  conftest.py
tests/integration/: test_trading_flow.py
tests/unit/: test_features.py  test_risk_guard.py  test_signals.py
